Finished. Teachers and Classroom are linked

--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/classroom.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/classroom.html
@@ -19,12 +19,12 @@
     <h2>Administrator</h2>
 </div>​
 
-  <li><a href="#dash">Dashboard</a></li>
-  <li><a href="#settings">Settings</a></li>
-  <li><a href="#form">View Applications</a></li>
-  <li><a href="#form">Teachers</a></li>
-  <li><a class="active" href="#form">Classrooms</a></li>
-  <li><a href="#disconn">Disconnect</a></li>
+    <li><a href="dashboard_admin">Dashboard</a></li>
+    <li><a href="#settings">Settings</a></li>
+    <li><a href="candidates_admin">View Applications</a></li>
+    <li><a href="teachers">Teachers</a></li>
+    <li><a class="active" href="classroom">Classrooms</a></li>
+    <li><a href="/disconnect">Disconnect</a></li>
   <br>
   <hr>
       <p id="contact">
@@ -61,7 +61,7 @@
     			</label> <input type="text" name="locatie" id="etaj" value="" />
     			<br>
     			<label for="nr">Numar locuri:<br>
-    			</label> <input type="number" name="nr_locuri" id="nr" value="" />
+    			</label> <input type="text" name="nr_locuri" id="nr" value="" />
     			<br>
 
                 <input type="submit" name="button" value="Adaugare clasa">
