--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/tabel_profesori.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/tabel_profesori.html
@@ -25,12 +25,12 @@
 
 
 
-    <li><a href="#dash">Dashboard</a></li>
+    <li><a href="dashboard_admin">Dashboard</a></li>
     <li><a href="#settings">Settings</a></li>
-    <li><a href="#form">View Applications</a></li>
-    <li><a class="active" href="#form">Teachers</a></li>
-    <li><a href="#form">Classrooms</a></li>
-    <li><a href="#disconn">Disconnect</a></li>
+    <li><a href="candidates_admin">View Applications</a></li>
+    <li><a class="active" href="teachers">Teachers</a></li>
+    <li><a href="classroom">Classrooms</a></li>
+    <li><a href="/disconnect">Disconnect</a></li>
     <br>
     <hr>
     <br><br><br><br><br>
