--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/teachers.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/teachers.html
@@ -22,12 +22,12 @@
 
 
 
-    <li><a href="#dash">Dashboard</a></li>
+    <li><a href="dashboard_admin">Dashboard</a></li>
     <li><a href="#settings">Settings</a></li>
-    <li><a href="#form">View Applications</a></li>
-    <li><a class="active" href="#form">Teachers</a></li>
-    <li><a href="#form">Classrooms</a></li>
-    <li><a href="#disconn">Disconnect</a></li>
+    <li><a href="candidates_admin">View Applications</a></li>
+    <li><a class="active" href="teachers">Teachers</a></li>
+    <li><a href="classroom">Classrooms</a></li>
+    <li><a href="/disconnect">Disconnect</a></li>
     <br>
     <hr>
     <br><br><br><br><br>
@@ -65,7 +65,7 @@
                 </label> <input type="text" name="prenume" id="etaj" value="" />
                 <br><br>
                 <label for="nr">CNP:<br>
-                </label> <input type="number" name="pcnp" id="nr" value="" />
+                </label> <input type="text" name="pcnp" id="nr" value="" />
                 <br><br>
                 <input type="submit" name="button" value="add">
                 <input type="submit" name="button" value="delete">
