--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/candidates_admin.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/candidates_admin.html
@@ -1,27 +1,86 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:c="http://www.w3.org/1999/XSL/Transform" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
+    <title>Tabel Candidati</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="../style/profesori.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Montserrat:700,400|Roboto:400,100,300,500,900'
+          rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript" src="../JS/jquery.dform-1.1.0.min.js"></script>
     <meta charset="UTF-8">
-    <title>Tabel Candidati</title>
 </head>
-<body>
-<table>
-        <tr th:each="entry : ${candidates}">
-            <td th:text="${entry.candidate.cnp}"></td>
-            <td th:text="${entry.candidate.firstname}"></td>
-            <td th:text="${entry.candidate.lastname}"></td>
+<body bgcolor="#e6e6e6">
+<ul>
 
-            <td class="view_form_button">
-                <!--Fiecare href se expandeaza intr-un "candidates_whatever?cnp=cnpul_candidatului"
-                    Aparent e relevant @ si nu $.
-                -->
-                <a th:href="@{/candidates_view_form(cnp=${entry.candidate.cnp})}">Formular</a>
-                <a th:href="@{/candidates_accept(cnp=${entry.candidate.cnp})}">Accepta</a>
-                <a th:href="@{/candidates_reject(cnp=${entry.candidate.cnp})}">Refuza</a>
-            </td>
-        </tr>
-    </table>
+    <div class="logo"></div>
+
+    <!-- <li><div class="avatar"></div><h3>John Smith</h3></li> -->
+
+    <div class="content">
+        <img src="/images/profesori/avatar.png" alt="" width="50px" />
+        <h3>Administrator</h3>
+    </div>​
+
+
+
+    <li><a href="#dash">Dashboard</a></li>
+    <li><a href="#settings">Settings</a></li>
+    <li><a href="#form">View Applications</a></li>
+    <li><a class="active" href="#form">Teachers</a></li>
+    <li><a href="#form">Classrooms</a></li>
+    <li><a href="#disconn">Disconnect</a></li>
+    <br>
+    <hr>
+    <br><br><br><br><br>
+    <br><br><br><br><br>
+
+    <p id="contact">
+        Contact<br>
+        Adress:<br>
+        Facultatea de informatica,<br>
+        Universitatea "Al. I. Cuza",<br>
+        General Berthelot, 16, IASI <br>
+        700483, ROMANIA <br>
+        Phone: +40 232 201090<br>
+        E-mail: secretariat@info.uaic.ro
+    </p>
+</ul>
+
+<!-- <div id="section-dash" class="tab-content" style="margin-left:20%;padding:1px 16px;height:1000px;">
+ <input type="text" name="search" placeholder="Search">
+ -->
+
+<div class="main">
+    <div class="widget-box sample-widget">
+        <div class="widget-header">
+            <h2>Classroom:</h2>
+            <i class="fa fa-cog"></i>
+        </div>
+        <div class="widget-content">
+            <br>
+            <table>
+                <tr th:each="entry : ${candidates}">
+                    <td th:text="${entry.candidate.cnp}"></td>
+                    <td th:text="${entry.candidate.firstname}"></td>
+                    <td th:text="${entry.candidate.lastname}"></td>
+
+                    <td class="view_form_button">
+                        <!--Fiecare href se expandeaza intr-un "candidates_whatever?cnp=cnpul_candidatului"
+                            Aparent e relevant @ si nu $.
+                        -->
+                        <a th:href="@{/candidates_view_form(cnp=${entry.candidate.cnp})}">Formular</a>
+                        <a th:href="@{/candidates_accept(cnp=${entry.candidate.cnp})}">Accepta</a>
+                        <a th:href="@{/candidates_reject(cnp=${entry.candidate.cnp})}">Refuza</a>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
+</div>
+
+<br><br>
+
 </body>
 </html>
