Am inlocuit db-ul cu unul mai vechi cu formulare bune. exista si un back-up FiiAdmisssion.db2, cu ultima versiune

--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/candidates_admin.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/candidates_admin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:c="http://www.w3.org/1999/XSL/Transform" xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Tabel Candidati</title>
+    <title>Teachers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../style/profesori.css" type="text/css" media="screen">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -25,12 +25,12 @@
 
 
 
-    <li><a href="#dash">Dashboard</a></li>
+    <li><a href="dashboard_admin">Dashboard</a></li>
     <li><a href="#settings">Settings</a></li>
-    <li><a href="#form">View Applications</a></li>
-    <li><a class="active" href="#form">Teachers</a></li>
-    <li><a href="#form">Classrooms</a></li>
-    <li><a href="#disconn">Disconnect</a></li>
+    <li><a class="active" href="candidates_admin">View Applications</a></li>
+    <li><a href="teachers">Teachers</a></li>
+    <li><a href="classroom">Classrooms</a></li>
+    <li><a href="/disconnect">Disconnect</a></li>
     <br>
     <hr>
     <br><br><br><br><br>
@@ -55,7 +55,7 @@
 <div class="main">
     <div class="widget-box sample-widget">
         <div class="widget-header">
-            <h2>Classroom:</h2>
+            <h2>Candidates:</h2>
             <i class="fa fa-cog"></i>
         </div>
         <div class="widget-content">
@@ -81,6 +81,11 @@
 </div>
 
 <br><br>
+<br><br>
 
 </body>
 </html>
+
+
+
+
