--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard_admin.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard_admin.html
@@ -55,7 +55,7 @@
             <i class="fa fa-cog"></i>
         </div>
         <div class="widget-content">
-            <h2> 291</h2>
+            <h2 th:text="${nrCandidates}"></h2>
         </div>
     </div>
 
@@ -65,7 +65,7 @@
             <i class="fa fa-cog"></i>
         </div>
         <div class="widget-content">
-            <h2> 200</h2>
+            <h2 th:text="${checked}"></h2>
         </div>
     </div>
 
@@ -76,7 +76,7 @@
             <i class="fa fa-cog"></i>
         </div>
         <div class="widget-content">
-            <h2> 91</h2>
+            <h2 th:text="${unchecked}"> </h2>
         </div>
     </div>
 
