--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard.html
@@ -17,7 +17,7 @@
  <!-- <li><div class="avatar"></div><h3>John Smith</h3></li> -->
 
 <div class="content">
-    <h2>John Smith</h2>
+    <h2 id="user_name" th:text="${user_name}"></h2>
 </div>​
 
 
