--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/static/style/dashboard.css
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/static/style/dashboard.css
@@ -71,6 +71,7 @@ p{
   height: 35px;
   padding: 15px;
   overflow: hidden;
+
   font-family: "Roboto", sans-serif;
 }
 
@@ -181,4 +182,7 @@ h3{
   display: block;
   margin-left: auto;
   margin-right: auto ;
+}
+#user_name{
+    font-size:20px;
 }
