--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/profesori.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/profesori.html
@@ -22,7 +22,7 @@
 
 
     <li><a href="#dash">Dashboard</a></li>
-    <li><a href="#settings">Settings</a></li>
+    <li id="news"><a href="#news">Add News</a></li>
     <li><a  href="candidates_admin">View Applications</a></li>
     <li><a class="active" href="#form">Teachers</a></li>
     <li><a href="#form">Classrooms</a></li>
