--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/teachers.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/teachers.html
@@ -23,7 +23,7 @@
 
 
     <li><a href="dashboard_admin">Dashboard</a></li>
-    <li><a href="#settings">Settings</a></li>
+    <li id="news"><a href="#news">Add News</a></li>
     <li><a href="candidates_admin">View Applications</a></li>
     <li><a class="active" href="teachers">Teachers</a></li>
     <li><a href="classroom">Classrooms</a></li>
