--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/static/style/login_signup2.css
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/static/style/login_signup2.css
@@ -122,8 +122,8 @@ textarea {
 
 .logo {
   width: auto;
-  height: 50px;
-  background: url("logo.png");
+  height: 60px;
+  background: url("../images/logo.png");
   /*background-color: #3388CB;*/
   background-position: center;
   background-size: 200px auto;
