--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>Dashboard</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,6 +17,7 @@
  <!-- <li><div class="avatar"></div><h3>John Smith</h3></li> -->
 
 <div class="content">
+    <!--/*@thymesVar id="user_name" type="String"*/-->
     <h2 id="user_name" th:text="${user_name}"></h2>
 </div>​
 
@@ -61,6 +62,7 @@
         <!--   <i class="fa fa-cog"></i>  -->
          </div>
          <div class="widget-content">
+           <!--/*@thymesVar id="status_aplicatie" type="String"*/-->
            <h3 th:text="${status_aplicatie}"></h3>
          </div>
        </div>
@@ -92,6 +94,7 @@
                      <!--      <i class="fa fa-cog"></i>   -->
                          </div>
                          <div class="widget-content">
+                           <!--/*@thymesVar id="nr_aplicatii_depuse" type="String"*/-->
                            <h3 th:text="${nr_aplicatii_depuse}"></h3>
                          </div>
                        </div>
