Link with login and signup

--- a/FrontEnd/templates/index.html
+++ b/FrontEnd/templates/index.html
@@ -43,7 +43,7 @@
                     </li>
                 </ul>
                 <div class="right">
-                	<form action="#">
+                	<form action="login2.html">
                 		<button tabindex="2"  accesskey="l">LOG IN</button>
                 	</form>
                 </div>
@@ -60,7 +60,7 @@
                 <div class="intro">
                     <h1>Bine ai venit la <br> Facultatea de Informatic&#259; Ia&#351;i</h1>
                     <h2>Al&#259;tur&#259;-te facult&#259;&#355;ii noastre! Creeaz&#259;&#355;i un cont, ap&#259;s&#226;nd butonul de mai jos.</h2>
-                    <form action="#">
+                    <form action="signup2.html">
                     	<button tabindex="3"  accesskey="s">SIGN UP</button>
                     </form>
                 </div>
