--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard.html
@@ -117,9 +117,12 @@
           <h2>Anunturi</h2>
           <i class="fa fa-cog"></i>
         </div>
-        <div id="annoncements" class="widget-content">
-            <p><b id = "title-ad">TEST.-</b> TEST</p>
-            <div id = "load_more" ><a href="#">Load More</a></div>
+        <div class="widget-content">
+          <p>Inscrierile pentru licenta s-au terminat. S-au inscris 291 candidati.</p>
+          <p>Examenul de admitere va avea loc in data de 29 Iunie 2017.</p>
+          <p>A aparut lista cu repartizari pe sali. O poti verifica pe https://docs.google.com/document/u/0/.</p>
+          <p>Actele necesare pentru inscriere la admitere se gasesc aici: https://docs.google.com/document.</p>
+          <p>S-au deschis inscrierile pentru licenta 2017. Ai timp sa te inscrii pana pe 17 iunie.</p>
         </div>
       </div>
 
