--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/login.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/login.html
@@ -28,7 +28,7 @@
           <label>Password:</label><br>
            <input type="password" placeholder="Set A Password" name="pswall" required>
       </div>
-      <p class="forgot"><a href="#">Forgot Password?</a></p>
+      <p class="forgot"><a href="/register">New? Sign up!</a></p>
       <button class="button button-block" tabindex="1" accesskey="b"/>Log In</button>
       <p id="error_msg" th:text="${failure}"></p>
   </form>
