--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard.html
@@ -5,32 +5,34 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="../style/dashboard.css" type="text/css" media="screen">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-<link href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Montserrat:700,400|Roboto:400,100,300,500,900"
+<link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Montserrat:700,400|Roboto:400,100,300,500,900"
     rel='stylesheet' type='text/css'/>
 </head>
 <body>
 
 <ul>
 
-<div class="logo"></div>
-
- <!-- <li><div class="avatar"></div><h3>John Smith</h3></li> -->
-
-<div class="content">
-    <!--/*@thymesVar id="user_name" type="String"*/-->
-    <h2 id="user_name" th:text="${user_name}"></h2>
-</div>​
-
-
-
-  <li><a class="active" href="dashboard.html">Dashboard</a></li>
-  <li><a href="https://localhost:8090/preform">Application Form</a></li>
-  <li><a href="/disconnect">Disconnect</a></li>
-
-  <hr>
+    <li>
+        <div class="logo"></div>
+    </li>
+    <li>
+        <div class="content">
+            <!--/*@thymesVar id="user_name" type="String"*/-->
+            <h2 id="user_name" th:text="${user_name}"></h2>
+        </div>​
+    </li>
 
 
-  <p id="contact">
+    <li><a class="active" href="/dashboard">Dashboard</a></li>
+    <li><a href="/preform">Application Form</a></li>
+    <li><a href="/disconnect">Disconnect</a></li>
+    <!--/*@thymesVar id="notifications" type="List<String>"*/-->
+    <li><a href="/notifications">Notifications [<span th:text="${notifications.size()}"></span>]</a></li>
+
+    <li><hr></li>
+
+    <li>
+    <p id="contact">
     Contact<br>
     Adress:<br>
     Facultatea de informatica,<br>
@@ -40,7 +42,7 @@
     Phone: +40 232 201090<br>
     E-mail: secretariat@info.uaic.ro
     </p>
-
+    </li>
 </ul>
 
 
