small small small small fixes

--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/teachers.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/teachers.html
@@ -52,7 +52,7 @@
 <div class="main">
     <div class="widget-box sample-widget">
         <div class="widget-header">
-            <h2>Classroom:</h2>
+            <h2>Teachers: </h2>
             <i class="fa fa-cog"></i>
         </div>
         <div class="widget-content">
