--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard_admin.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard_admin.html
@@ -20,26 +20,25 @@
         <h3>Administrator</h3>
     </div>​
 
-
-
     <li><a class="active" href="#dash">Dashboard</a></li>
     <li id="news"><a href="#news">Add News</a></li>
     <li><a  href="candidates_admin">View Applications</a></li>
     <li><a href="teachers">Teachers</a></li>
     <li><a href="classroom">Classrooms</a></li>
     <li><a href="/disconnect">Disconnect</a></li>
+    <li><a href="/marks">Add marks</a></li>
     <hr>
 
 
     <p id="contact">
         Contact<br>
-        Adress:<br>
+        <b>Adress:</b><br>
         Facultatea de informatica,<br>
         Universitatea "Al. I. Cuza",<br>
         General Berthelot, 16, IASI <br>
         700483, ROMANIA <br>
-        Phone: +40 232 201090<br>
-        E-mail: secretariat@info.uaic.ro
+        <b>Phone:</b> +40 232 201090<br>
+        <b>E-mail:</b> secretariat@info.uaic.ro
     </p>
 </ul>
 
