marks html but still not complete don't look yet thanks

--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/marks.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/marks.html
@@ -53,13 +53,13 @@
         <div class="widget-content">
             <br>
             <form th:action="@{/classroom_operations}" method="get">
-                <label for="cod">CNP:<br>
+                <label for="cod">CNP: <br>
                 </label> <input type="text" name="id" id="cod" value="" />
                 <br>
-                <label for="etaj">Locatie:<br>
+                <label for="etaj">Tip examen: <br>
                 </label> <input type="text" name="locatie" id="etaj" value="" />
                 <br>
-                <label for="nr">Numar locuri:<br>
+                <label for="nr">Note: <br>
                 </label> <input type="text" name="nr_locuri" id="nr" value="" />
                 <br>
 
