--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/candidate_view_form.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/candidate_view_form.html
@@ -1025,5 +1025,25 @@
         </div>
     </div>
 </div>
+
+<div class="container">
+    <div class="row form-group">
+        <div class="col-xs-12">
+            <ul class="nav nav-pills nav-justified thumbnail setup-panel">
+                <li class="active">
+                    <a href="#accept">
+                        <h4 class="list-group-item-heading">Accept</h4>
+                    </a>
+                </li>
+                <li >
+                    <a href="#reject">
+                        <h4 class="list-group-item-heading">Reject</h4>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
