--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard.html
@@ -3,7 +3,7 @@
 <head>
 <title>Dashboard</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="../style/dashboard.css" type="text/css" media="screen">
+<link rel="stylesheet" href="/style/dashboard.css" type="text/css" media="screen">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Montserrat:700,400|Roboto:400,100,300,500,900"
     rel='stylesheet' type='text/css'/>
@@ -52,12 +52,7 @@
  -->
 
 <div class="main">
-<!--
-  <div id="header">
 
-       <input type="text" name="search" value="Search..">
-   </div>
--->
    <div class="widget-box sample-widget2">
          <div class="widget-header">
            <h2>Statusul aplicatiei:</h2>
@@ -108,7 +103,7 @@
          <i class="fa fa-cog"></i>
        </div>
        <div class="widget-content">
-         <img src="../images/info.png" width="50%" alt="info" >
+         <img src="/images/info.png" width="50%" alt="info" >
        </div>
      </div>
 
