--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/notifications.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/notifications.html
@@ -3,14 +3,14 @@
 <head>
     <title>Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../style/dashboard.css" type="text/css" media="screen">
+    <link rel="stylesheet" href=/style/dashboard.css" type="text/css" media="screen">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Montserrat:700,400|Roboto:400,100,300,500,900"
           rel='stylesheet' type='text/css'/>
 </head>
 <body>
 
-<ul>
+<ul class="sidebar">
 
     <li>
         <div class="logo"></div>
@@ -47,11 +47,13 @@
 
 <div class="main">
     <div class="widget-box sample-widget">
-        <li>
+        <h2>Notificarile tale:</h2>
+        <ul th::if="${notifications.size() != 0}">
             <th:block th:each="notification : ${notifications}">
                 <li><p th:text="${notification}"></p></li>
             </th:block>
-        </li>
+        </ul>
+        <h4 th:if="${notifications.size() == 0}">Nu ai notificari.</h4>
     </div>
 
 </div>
