added marks basically everywhere

--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/marks.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/marks.html
@@ -21,6 +21,7 @@
     <li><a href="candidates_admin">View Applications</a></li>
     <li><a href="teachers">Teachers</a></li>
     <li><a class="active" href="classroom">Classrooms</a></li>
+    <li><a href="/marks">Add marks</a></li>
     <li><a href="/disconnect">Disconnect</a></li>
     <br>
     <hr>
@@ -56,10 +57,7 @@
                 <label for="nr">Nota: <br>
                 </label> <input type="text" name="mark" id="nr" value="" />
                 <br>
-
-                <input type="submit" name="button" value="Adaugare clasa">
-                <input type="submit" name="button" value="Stergere clasa">
-                <input type="submit" name="button" value="Vizualizare sali">
+                <input type="submit" name="button" value="Adaugare nota">
             </form>
         </div>
     </div>
