--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/teachers.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/teachers.html
@@ -27,6 +27,7 @@
     <li><a href="candidates_admin">View Applications</a></li>
     <li><a class="active" href="teachers">Teachers</a></li>
     <li><a href="classroom">Classrooms</a></li>
+    <li><a href="/marks">Add marks</a></li>
     <li><a href="/disconnect">Disconnect</a></li>
     <br>
     <hr>
