--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/classroom_table.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/classroom_table.html
@@ -28,6 +28,7 @@
     <li><a href="candidates_admin">View Applications</a></li>
     <li><a href="teachers">Teachers</a></li>
     <li><a class="active" href="classroom">Classrooms</a></li>
+    <li><a href="/marks">Add marks</a></li>
     <li><a href="/disconnect">Disconnect</a></li>
     <br>
     <hr>
