--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<ul>
+<ul class="sidebar">
 
     <li>
         <div class="logo"></div>
@@ -26,8 +26,7 @@
     <li><a class="active" href="/dashboard">Dashboard</a></li>
     <li><a href="/preform">Application Form</a></li>
     <li><a href="/disconnect">Disconnect</a></li>
-    <!--/*@thymesVar id="notifications" type="List<String>"*/-->
-    <li><a href="/notifications">Notifications [<span th:text="${notifications.size()}"></span>]</a></li>
+    <li><a href="/notifications">Notifications [<span th:text="${unread_notifications}"></span>]</a></li>
 
     <li><hr></li>
 
