--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<ul th:replace="frag_sidebar :: sidebar_candidates">
+<ul th:replace="frag_sidebar :: sidebar_candidates ('/dashboard')">
     sidebar goes here
 </ul>
 
