--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard_admin.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/dashboard_admin.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<ul th:replace="frag_sidebar :: sidebar_admin">
+<ul th:replace="frag_sidebar :: sidebar_admin ('/dashboard_admin')">
     sidebar goes here
 </ul>
 
