--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/candidates_admin.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/candidates_admin.html
@@ -12,41 +12,7 @@
     <meta charset="UTF-8">
 </head>
 <body bgcolor="#e6e6e6">
-<ul class="sidebar">
-
-    <div class="logo"></div>
-
-    <!-- <li><div class="avatar"></div><h3>John Smith</h3></li> -->
-
-    <div class="content">
-
-        <h3>Administrator</h3>
-    </div>​
-
-
-
-    <li><a href="dashboard_admin">Dashboard</a></li>
-    <li id="news"><a href="#news">Add News</a></li>
-    <li><a class="active" href="candidates_admin">View Applications</a></li>
-    <li><a href="teachers">Teachers</a></li>
-    <li><a href="classroom">Classrooms</a></li>
-    <li><a href="/disconnect">Disconnect</a></li>
-    <br>
-    <hr>
-    <br><br><br><br><br>
-    <br><br><br><br><br>
-
-    <p id="contact">
-        Contact<br>
-        Adress:<br>
-        Facultatea de informatica,<br>
-        Universitatea "Al. I. Cuza",<br>
-        General Berthelot, 16, IASI <br>
-        700483, ROMANIA <br>
-        Phone: +40 232 201090<br>
-        E-mail: secretariat@info.uaic.ro
-    </p>
-</ul>
+<ul th:replace="frag_sidebar :: sidebar_admin ('/candidates_admin')"></ul>
 
 <!-- <div id="section-dash" class="tab-content" style="margin-left:20%;padding:1px 16px;height:1000px;">
  <input type="text" name="search" placeholder="Search">
