--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/frag_sidebar.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/frag_sidebar.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<ul class="sidebar" th:fragment="sidebar_candidates">
+<ul class="sidebar" th:fragment="sidebar_candidates (page)">
 
     <li>
         <div class="logo"></div>
@@ -19,10 +19,10 @@
     </li>
 
 
-    <li><a class="active" href="/dashboard">Dashboard</a></li>
+    <li><a th:classappend="${page == '/dashboard'}? active : ''" href="/dashboard">Dashboard</a></li>
     <li><a href="/preform">Application Form</a></li>
     <li><a href="/disconnect">Disconnect</a></li>
-    <li><a href="/notifications">Notifications [<span th:text="${unread_notifications}"></span>]</a></li>
+    <li><a th:classappend="${page == '/notifications'}? active : ''"  href="/notifications">Notifications [<span th:text="${unread_notifications}"></span>]</a></li>
 
     <li><hr></li>
 
@@ -40,7 +40,7 @@
     </li>
 </ul>
 
-<ul class="sidebar" th:fragment="sidebar_admin">
+<ul class="sidebar" th:fragment="sidebar_admin (page)">
 
     <li><div class="logo"></div>
     </li>
@@ -49,12 +49,12 @@
         <h3>Administrator</h3>
     </li>​
 
-    <li><a class="active" href="#dash">Dashboard</a></li>
-    <li id="news"><a href="#news">Add News</a></li>
-    <li><a  href="candidates_admin">View Applications</a></li>
-    <li><a href="teachers">Teachers</a></li>
-    <li><a href="classroom">Classrooms</a></li>
-    <li><a href="/marks">Add marks</a></li>
+    <li><a th:classappend="${page == '/dashboard_admin'}? active : ''" href="/dashboard_admin">Dashboard</a></li>
+    <li id="news"><a th:classappend="${page == '/news'}? active : ''" href="#news">Add News</a></li>
+    <li><a th:classappend="${page == '/candidates_admin'}? active : ''" href="/candidates_admin">View Applications</a></li>
+    <li><a th:classappend="${page == '/teachers'}? active : ''" href="/teachers">Teachers</a></li>
+    <li><a th:classappend="${page == '/classroom'}? active : ''" href="/classroom">Classrooms</a></li>
+    <li><a th:classappend="${page == '/marks'}? active : ''" href="/marks">Add marks</a></li>
     <li><a href="/disconnect">Disconnect</a></li>
     <li>    <hr>
     </li>
