--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/marks.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/marks.html
@@ -47,7 +47,7 @@
         </div>
         <div class="widget-content">
             <br>
-            <form action="/mark" method="get">
+            <form action="/marks" method="post">
                 <label for="cod">CNP: <br>
                 </label> <input type="text" name="cnp" id="cod" value="" />
                 <br>
