--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/notifications.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/notifications.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Montserrat:700,400|Roboto:400,100,300,500,900"
           rel='stylesheet' type='text/css'/>
+    <link rel="stylesheet" href="/style/notifications.css" type="text/css" media="screen"/>
 </head>
 <body>
 
@@ -15,9 +16,10 @@
 <div class="main">
     <div class="widget-box sample-widget">
         <h2>Notificarile tale:</h2>
-        <ul th::if="${notifications.size() != 0}">
+        <ul class="notification_list" th::if="${notifications.size() != 0}">
             <th:block th:each="notification : ${notifications}">
-                <li><p th:text="${notification.getMessage()}"></p></li>
+                <li><p th:class="${notification.isRead()} ? 'read' : 'unread'"
+                       th:text="${notification.getMessage()}"></p></li>
             </th:block>
         </ul>
         <h4 th:if="${notifications.size() == 0}">Nu ai notificari.</h4>
