--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/notifications.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/notifications.html
@@ -50,7 +50,7 @@
         <h2>Notificarile tale:</h2>
         <ul th::if="${notifications.size() != 0}">
             <th:block th:each="notification : ${notifications}">
-                <li><p th:text="${notification}"></p></li>
+                <li><p th:text="${notification.message}"></p></li>
             </th:block>
         </ul>
         <h4 th:if="${notifications.size() == 0}">Nu ai notificari.</h4>
