--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/candidate_view_form.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/candidate_view_form.html
@@ -6,7 +6,7 @@
     <script src="../JS/jquery.dform-1.1.0.min.js" type="text/javascript"></script>
     <link crossorigin="anonymous" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" rel="stylesheet">
     <link href="../style/form.css" rel="stylesheet">
-    <script src="../JS/candidate_view_form.js"></script>
+    <link rel="stylesheet" href="../style/accept_reject.css" type="text/css" media="screen">
 </head>
 <body>
 <div class="container">
@@ -1029,14 +1029,15 @@
 <div class="container">
     <div class="row form-group">
         <div class="col-xs-12">
-            <ul class="nav nav-pills nav-justified thumbnail setup-panel">
-                <li class="active">
-                    <a href="#accept">
+            <ul class="nav nav-pills nav-justified thumbnail">
+                <li>
+                    <a class="btn btn-success" id="accept_student">
                         <h4 class="list-group-item-heading">Accept</h4>
+
                     </a>
                 </li>
                 <li >
-                    <a href="#reject">
+                    <a class="btn btn-warning" id="reject_student">
                         <h4 class="list-group-item-heading">Reject</h4>
                     </a>
                 </li>
@@ -1044,6 +1045,39 @@
         </div>
     </div>
 </div>
+
+<div id="accept_modal" class="accept">
+    <div class="accept_content">
+        <div class="accept_header">
+            <span class="close_accept">&times;</span>
+            <h2>Accept Student</h2>
+        </div>
+        <div class="accept_body">
+            <form th:action="@{/accept_candidate/?cnp=__${cnp}__}" method="POST">
+                <textarea id="accept_text" name="comment">Felicitari! Ai fost acceptat pentru sustinerea examenului de admitere la Facultatea de Informatica.</textarea>
+                <button>Send</button>
+            </form>
+        </div>
+    </div>
+</div>
+
+<div id="reject_modal" class="reject">
+    <div class="reject_content">
+        <div class="reject_header">
+            <span class="close_reject">&times;</span>
+            <h2>Reject Student</h2>
+        </div>
+        <div class="reject_body">
+            <form th:action="@{/reject_candidate/?cnp=__${cnp}__}" method="POST">
+                <textarea id="reject_text" name="comment">Ne pare rau, dar nu indepliniti conditiile necesare pentru a putea participa la admiterea din cadrul Facultatii de Informatica.</textarea>
+                <button>Send</button>
+            </form>
+        </div>
+    </div>
+</div>
+
+<script src="../JS/candidate_view_form.js"></script>
+<script type="text/javascript" src="../JS/accept_reject_student.js"></script>
 
 </body>
 </html>
