--- a/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/notifications.html
+++ b/Integration/Mare_Proiect/FII-ADMISSION/src/main/resources/templates/notifications.html
@@ -27,7 +27,7 @@
     <li><a href="/preform">Application Form</a></li>
     <li><a href="/disconnect">Disconnect</a></li>
     <!--/*@thymesVar id="notifications" type="List<String>"*/-->
-    <li><a href="/notifications">Notifications [<span th:text="${unread_notifications}"></span>]</a></li>
+    <li><a href="/notifications">Notifications [<span th:text="${notifications.size()}"></span>]</a></li>
 
     <li><hr></li>
 
@@ -50,7 +50,7 @@
         <h2>Notificarile tale:</h2>
         <ul th::if="${notifications.size() != 0}">
             <th:block th:each="notification : ${notifications}">
-                <li><p th:text="${notification.getMessage()}"></p></li>
+                <li><p th:text="${notification.message}"></p></li>
             </th:block>
         </ul>
         <h4 th:if="${notifications.size() == 0}">Nu ai notificari.</h4>
